--- a/src/components/style.css
+++ b/src/components/style.css
@@ -3,6 +3,7 @@
     width: 90%;
     position: relative;
     align-items: center;
+    margin-top: 5%;
 }
 
 .input__box{
@@ -41,4 +42,38 @@
 .input__submit:active{
     transform: scale(0.8);
     box-shadow: 0 0 5px black;
+}
+
+.todos {
+    display: flex;
+    justify-content: space-evenly;
+    width: 90%;
+    flex-wrap: wrap;
+    color: white;
+}
+
+.todos__single {
+    display: flex;
+    width: 29.5%;
+    border-radius: 5px;
+    padding: 20px;
+    margin-top: 15px;
+    background-image: url("../../public/textured-backgound.jpg");
+}
+
+.todos__single--text {
+    flex: 1;
+    padding: 5px;
+    font-size: 20px;
+
+}
+
+.todos__single--text focus {
+    outline: none;
+}
+
+.icon {
+    margin-left: 10px;
+    font-size: 25px;
+    cursor: pointer;
 }
