--- a/src/components/style.css
+++ b/src/components/style.css
@@ -65,6 +65,8 @@
     flex: 1;
     padding: 5px;
     font-size: 20px;
+    border-radius: 10px;
+    border: none;
 
 }
 
@@ -76,4 +78,18 @@
     margin-left: 10px;
     font-size: 25px;
     cursor: pointer;
+}
+
+@media (max-width: 700px) {
+    .input {
+        width: 95%;
+    }
+
+    .todo {
+        width: 95%;
+    }
+
+    .todos__single {
+        width: 100%;
+    }
 }
