--- a/src/components/style.css
+++ b/src/components/style.css
@@ -53,13 +53,13 @@
     align-items: flex-start;
     width: 95%;
     margin-top: 10px;
-
     
 }
 
 .todos {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     padding: 15px;
     border-radius: 15px;
     width: 47.5%;
@@ -75,6 +75,8 @@
 
 .todos__single {
     display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 5px;
     padding: 20px;
     margin-top: 15px;
@@ -111,17 +113,26 @@
         width: 95%;
     }
 
-    .todo {
+    .todos {
         width: 95%;
+        margin-bottom: 10px;
+        border: 2px solid red;
     }
 
     .todos__single {
-        width: 100%;
+        width: 70%;
+    }
+
+    .container{
+        width: 95%;
+        flex-direction: column;
     }
 }
 
 @media (max-width: 1100px) {
-    .todos {
-        width: 45%;
-    }
+    
+}
+
+.remove {
+    background-color: rgb(230, 101, 101);
 }
